--- a/Services/Product/Infrastructure/Inventa.Product.Persistence/Inventa.Product.Persistence.csproj
+++ b/Services/Product/Infrastructure/Inventa.Product.Persistence/Inventa.Product.Persistence.csproj
@@ -7,8 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Context\" />
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Inventa.Product.Application\Inventa.Product.Application.csproj" />
+    <ProjectReference Include="..\..\Core\Inventa.Product.Domain\Inventa.Product.Domain.csproj" />
   </ItemGroup>
 
 </Project>
