Brand and Category Handlers

--- a/Services/Product/Presentation/Inventa.Product.WebAPI/Inventa.Product.WebAPI.csproj
+++ b/Services/Product/Presentation/Inventa.Product.WebAPI/Inventa.Product.WebAPI.csproj
@@ -14,4 +14,10 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Inventa.Product.Application\Inventa.Product.Application.csproj" />
+    <ProjectReference Include="..\..\Core\Inventa.Product.Domain\Inventa.Product.Domain.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Inventa.Product.Persistence\Inventa.Product.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
