--- a/Services/Product/Core/Inventa.Product.Application/Inventa.Product.Application.csproj
+++ b/Services/Product/Core/Inventa.Product.Application/Inventa.Product.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Inventa.Product.Domain\Inventa.Product.Domain.csproj" />
   </ItemGroup>
 
