--- a/IdentityServer/Inventa.IdentityServer/appsettings.json
+++ b/IdentityServer/Inventa.IdentityServer/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Server=localhost,1882;Database=InventaIdentityDb;User=sa;Password=id@qQR467}Y(;Trust Server Certificate=true;"
   }
 }
